# SphereMeet

./: .cursorignore  .gitignore  DEVELOPMENT_PLAN.md  README.md  render.yaml
.agent/skills/code-review/: skill.md
.agent/skills/pixelart/: skill.md
apps/server/: .env.example  Cargo.toml
apps/server/migrations/: 001_initial.sql
apps/server/src/: auth.rs  db.rs  error.rs  main.rs  state.rs  ws.rs
apps/server/src/handlers/: auth.rs  chat.rs  dev.rs  mod.rs  spaces.rs
apps/web/: .env.example  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(app)/: layout.tsx
apps/web/src/app/(app)/activity/: page.tsx
apps/web/src/app/(app)/chat/: page.tsx
apps/web/src/app/(app)/meetings/: page.tsx
apps/web/src/hooks/: WebSocketProvider.tsx  useWebSocket.ts
apps/web/src/store/: index.ts
infra/: docker-compose.yml
