[package]
name = "gather-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full", "signal"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
futures = "0.3"
once_cell = "1"
governor = "0.6"
tower_governor = "0.4"
tokio-util = "0.7"
dashmap = "6.1.0"
argon2 = "0.5"
